# pet-game-engine

./: .gitignore  CMakeLists.txt  components.cmake  engine.cmake  native.cmake
.github/workflows/: build-appimage.yml  build-msys2.yml
include/Components/EC/: Position.h  PositionEvent.h  Sprite.h  SpriteEvent.h  WorldContext.h
include/Engine/Engine/: Component.h  Entity.h  EntityId.h  EventBus.h  Input.h  Log.h  NativeContext.h  RenderSystem.h  Tick.h  Types.h
include/Game/Game/: Game.h
include/Native/Native/: ConsoleOpener.h  LogWindow.h  Native.h  NativeApplication.h  TextureLoader.h  Ticker.h
src/EC/: Position.cpp  Sprite.cpp  WorldContext.cpp
src/Engine/: Component.cpp  Entity.cpp  EntityId.cpp  Log.cpp
src/Game/: Game.cpp
src/Native/: LogWindow.cpp  Native.cpp  NativeApplication.cpp  TextureLoader.cpp  Ticker.cpp  main.cpp
